@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

Project"activities 0...*"-up-|>"project 0,1"Activity
Task -up-|>Activity
Project*--->Activity
Task"task 1"*-->"intervals 0...*"Interval
SearchByTag --|> Visitor

package java.util{
Observable o--up->Observer : Observers*
}
Clock---|>Observable
Interval..|>Observer

Interface Observer{
    +update(observable : Observable, obj : Object)
}
Abstract Observable{
    +addObserver(observer : Observer)
    +setChanged()
    +notifyObservers()

}

Interface Visitor{
    +visitProject(project : Project)
    +visitTask(task : Task)
    +visitInterval(interval : Interval)
    +printResult()

}

class Project {
    +TotalTime()
    +addActivity(activity : Activity)
    +removeActivity(activity : Activity)
    +takeClass() : String
}
class Task{
    +TotalTime()
    +start()
    +stop()
    +takeClass() : String
    +save() : JSONObject

}

abstract Activity{
    #name : String
    #initialDate : LocalDateTime
    #finalDate : LocalDateTime
    #duration : Duration

    +TotalTime()
    +update(initialDate: LocalDateTime, finalDate: LocalDateTime)
    +takeClass() : String
    +save() : JSONObject
    +saver(filename : String)


}
class Interval{
    -initialDate : LocalDateTime
    -finalDate : LocalDateTime
    -duration : Duration

    +save() : JSONObject

}
class Clock{
    -timer : Timer
    -dateTime : LocalDateTime
    -instance = null : Clock
    +startTimer()
    +stopTimer()
    -tick()
}

class SearchByTag{
    -tag : String
    -result : List<Activity>
    +logger : Logger

    -visitProject(project : Project)
    -visitTask(task : Task)
    -visitInterval(interval : Interval)
    -printResult()
}

@enduml